revised: URL handling (prevent %20 for spaces)